--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>um7</name>
   <version>0.0.6</version>
   <description>The um7 package provides a C++ implementation of the CH Robotics serial protocol, and a
@@ -15,15 +15,20 @@
 
   <!-- <url type="website">http://ros.org/wiki/um7</url> -->
 
-  <buildtool_depend>catkin</buildtool_depend>
-
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>rosidl_default_generators</build_depend>
   <depend>serial</depend>
-  <depend>roscpp</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
   <depend>sensor_msgs</depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
-  <build_depend>message_generation</build_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
-  <exec_depend>message_runtime</exec_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
 
-  <test_depend>roslint</test_depend>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
+
 </package>
